added difference between profile and virtual-profile

--- a/services/default.cfg
+++ b/services/default.cfg
@@ -15,7 +15,7 @@ maxGoPeriod = 0
 transactional_log = True
 
 [serviceurl]
-url = http://localhost/istsos/
+url = https://simile.ddns.net
 
 [parameters]
 GO_resultModel = om:Observation
